syntax = "proto3";

package api;

option go_package = "./";

service Users {
  rpc GetUserData(GetUserDataRequest) returns (GetUserDataResponse);
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc LikePack(LikePackRequest) returns (Empty);
  rpc DislikePack(LikePackRequest) returns (Empty);
  rpc RatePack(RatePackRequest) returns (Empty);
  rpc UnratePack(RatePackRequest) returns (Empty);
  rpc GetRatedPacks(Empty) returns (RatedPacksResponse);
  rpc AssignNewPack(AssignNewPackRequest) returns (Empty);
  rpc GetAllPeople(Empty) returns (People);
}

message GetUserDataRequest {
  string login = 1;
}

message GetUserDataResponse {
  string login = 1;
  string city = 2;
  int32 wins = 3;
  int32 loses = 4;
  int32 bingo = 5;
  repeated FriendInfo friends = 6;
  repeated string packs = 7;
}

message FriendInfo {
  string login = 1;
  string city = 2;
  string bingo = 3;
}

message RegisterUserRequest {
  string login = 1;
  string email = 2;
  string city = 3;
  string password = 4;
}

message RegisterUserResponse {
  string error = 1;
}

message LoginUserRequest {
  string login = 1;
  string password = 2;
}

message LoginUserResponse {
  string error = 1;
}

message LikePackRequest {
  string login = 1;
  string pack = 2;
}

message RatePackRequest {
  string pack = 1;
}

message RatedPacksResponse {
  repeated string packs = 1;
}

message AssignNewPackRequest {
  string login = 1;
  string pack = 2;
}

message PersonInfo {
  string login = 1;
  string city = 2;
  int32 bingo = 3;
}

message People {
  repeated PersonInfo person = 1;
}

message Empty {}

